lib_LIBRARIES = libantlr.a
libantlr_includedir = $(includedir)/antlr

libantlr_a_CXXFLAGS = -I..
libantlr_a_SOURCES =\
	ANTLRUtil.cpp\
	ASTFactory.cpp\
	ASTNULLType.cpp\
	ASTRefCount.cpp\
	BaseAST.cpp\
	BitSet.cpp\
	CharBuffer.cpp\
	CharScanner.cpp\
	CommonAST.cpp\
	CommonASTWithHiddenTokens.cpp\
	CommonHiddenStreamToken.cpp\
	CommonToken.cpp\
	InputBuffer.cpp\
	LLkParser.cpp\
	MismatchedCharException.cpp\
	MismatchedTokenException.cpp\
	NoViableAltException.cpp\
	NoViableAltForCharException.cpp\
	Parser.cpp\
	RecognitionException.cpp\
	String.cpp\
	Token.cpp\
	TokenBuffer.cpp\
	TokenStreamBasicFilter.cpp\
	TokenStreamHiddenTokenFilter.cpp\
	TokenStreamSelector.cpp\
	TreeParser.cpp

libantlr_include_HEADERS =\
	ANTLRException.hpp\
	ANTLRUtil.hpp\
	AST.hpp\
	ASTArray.hpp\
	ASTFactory.hpp\
	ASTNULLType.hpp\
	ASTPair.hpp\
	ASTRefCount.hpp\
	BaseAST.hpp\
	BitSet.hpp\
	CharBuffer.hpp\
	CharInputBuffer.hpp\
	CharScanner.hpp\
	CharStreamException.hpp\
	CharStreamIOException.hpp\
	CircularQueue.hpp\
	CommonAST.hpp\
	CommonASTWithHiddenTokens.hpp\
	CommonHiddenStreamToken.hpp\
	CommonToken.hpp\
	IOException.hpp\
	InputBuffer.hpp\
	LLkParser.hpp\
	LexerSharedInputState.hpp\
	MismatchedCharException.hpp\
	MismatchedTokenException.hpp\
	NoViableAltException.hpp\
	NoViableAltForCharException.hpp\
	Parser.hpp\
	ParserSharedInputState.hpp\
	RecognitionException.hpp\
	RefCount.hpp\
	SemanticException.hpp\
	String.hpp\
	Token.hpp\
	TokenBuffer.hpp\
	TokenStream.hpp\
	TokenStreamBasicFilter.hpp\
	TokenStreamException.hpp\
	TokenStreamHiddenTokenFilter.hpp\
	TokenStreamIOException.hpp\
	TokenStreamRecognitionException.hpp\
	TokenStreamRetryException.hpp\
	TokenStreamSelector.hpp\
	TreeParser.hpp\
	TreeParserSharedInputState.hpp\
	config.hpp
